UCF-APR2.4/ftr main/force-app/main/default/objects/vlocity_cmt__Premises__c/objects/vlocity_cmt__Premises__c.object
<CustomObject>
    <fields>
        <fullName>Copper_Distance__c</fullName>
        <description>This field is used for the Address Based Pricing initiative. Stores the distance of copper from the current premise.</description>
        <label>Copper Distance (ft)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copper_Qualification__c</fullName>
        <label>Copper Qualification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copper_Tier__c</fullName>
        <label>Copper Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSAT_Ticket__c</fullName>
        <externalId>true</externalId>
        <label>DSAT Ticket #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_Distance__c</fullName>
        <description>This field is used for the Address Based Pricing initiative. Stores the distance of fiber from the current premise.</description>
        <label>Fiber Distance (ft)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiber_Qualification__c</fullName>
        <label>Fiber Qualification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_Tier__c</fullName>
        <label>Fiber Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InFootPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InFootPrint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_DSAT_Check__c</fullName>
        <label>Last DSAT Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lit__c</fullName>
        <label>Lit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premise_Detail__c</fullName>
        <formula>IF(isBlank(vlocity_cmt__StreetAddress__c), &apos;&apos;,(vlocity_cmt__StreetAddress__c &amp; &quot;, &quot; &amp;  vlocity_cmt__City__c &amp; &quot;, &quot; &amp;  vlocity_cmt__State__c  &amp; &quot;  &quot; &amp;  vlocity_cmt__PostalCode__c))</formula>
        <label>Premise Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_To_Sell__c</fullName>
        <formula>IF(ISPICKVAL(Fiber_Tier__c, &quot;BDT&quot;) &amp;&amp; ISPICKVAL(Copper_Tier__c, &quot;BDT&quot;),&quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified To Sell?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_CLLI__c</fullName>
        <label>WC CLLI</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_QOS__c</fullName>
        <label>WC QOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_Speed__c</fullName>
        <label>WC Speed</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_CO_to_Site_Total_Footage__c</fullName>
        <label>CO to Site Total Footage (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ftr_DPI_ControlNumber__c</fullName>
        <label>ftr DPI ControlNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_DPI_Environment__c</fullName>
        <label>ftr DPI Environment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_DPI_Exchange__c</fullName>
        <label>ftr DPI Exchange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_DPI_Wirecenter__c</fullName>
        <label>ftr DPI Wirecenter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_EquipmentCost__c</fullName>
        <label>EquipmentCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_FiberCost__c</fullName>
        <label>FiberCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_Future_HBE_WC_Speed__c</fullName>
        <label>Future HBE WC Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Guardrail_Cost__c</fullName>
        <description>Created for BSA Phase II</description>
        <label>Guardrail Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_HBE_Max_Qos__c</fullName>
        <label>HBE Max Qos</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_HBE_Max_Speed__c</fullName>
        <label>HBE Max Speed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_HBE_Products__c</fullName>
        <label>HBE Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_HBE__c</fullName>
        <label>HBE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ftr_Legacy__c</fullName>
        <label>Legacy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ftr_LengthFeet__c</fullName>
        <label>LengthFeet (ft)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ftr_LinkStatus__c</fullName>
        <description>Created for BSA</description>
        <label>LinkStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_NID_SFP_Costs_10G__c</fullName>
        <label>NID/SFP Costs &gt;10G</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_NID_SFP_Costs_1G_below__c</fullName>
        <label>NID/SFP Costs 1G &amp; below</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_NID_SFP_Costs_1G_up_to_10G__c</fullName>
        <label>NID/SFP Costs &gt;1G &amp; up to 10G</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_New_Fiber_Build_Footage__c</fullName>
        <label>New Fiber Build Footage (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ftr_PER_CLLI__c</fullName>
        <label>PERRouter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Plan_ID__c</fullName>
        <label>Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Planned_HBE_Roadmap__c</fullName>
        <label>Planned HBE Roadmap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Review_Reason__c</fullName>
        <label>Review Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Review_Status__c</fullName>
        <label>Review Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Route_Notes__c</fullName>
        <label>Route Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Servable__c</fullName>
        <label>Servable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftr_Splicing_Cost__c</fullName>
        <label>Splicing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_TR_Costs_10G__c</fullName>
        <label>TR Costs &gt;10G</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_TR_Costs_1G_below__c</fullName>
        <label>TR Costs 1G &amp; below</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_TR_Costs_1G_up_to_10G__c</fullName>
        <label>TR Costs &gt;1G &amp; up to 10G</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_TotalCost__c</fullName>
        <label>TotalCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_Total_New_Fiber_OSP_Costs__c</fullName>
        <label>Total New Fiber OSP Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ftr_WC_Speed_Mbps__c</fullName>
        <formula>IF (
	CONTAINS( WC_Speed__c, &apos;MB&apos;),  
	VALUE(TRIM(LEFT(WC_Speed__c, LEN(WC_Speed__c) - 2))),
	IF(
		CONTAINS( WC_Speed__c, &apos;GB&apos;),  
		VALUE(TRIM(LEFT(WC_Speed__c, LEN(WC_Speed__c) - 2))) * 1000,
		0
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WC Speed(Mbps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>no_of_partners__c</fullName>
        <label># of partners</label>
        <summaryForeignKey>Vendor_Connectivity__c.Premise__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>Date of Premises activation</description>
        <inlineHelpText>Date of Premises activation</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address1__c</fullName>
        <description>Additional premises address information - 1.</description>
        <label>Street Supplement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address2__c</fullName>
        <description>Additional premises address information - 2.</description>
        <label>Street Supplement 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCity__c</fullName>
        <label>Alternate City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCountry__c</fullName>
        <label>Alternate Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternatePostalCode__c</fullName>
        <label>Alternate Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateState__c</fullName>
        <label>Alternate State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateStreetAddress__c</fullName>
        <label>Alternate Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoNumber__c</fullName>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DistributionArea__c</fullName>
        <description>The name of the Distribution Region that the Premises is located in (or Distribution Company that is responsible for supplying a commodity to the Premises)</description>
        <label>Distribution Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Armagh</fullName>
                </value>
                <value>
                    <fullName>Chichester</fullName>
                </value>
                <value>
                    <fullName>Derby</fullName>
                </value>
                <value>
                    <fullName>Salisbury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Floor__c</fullName>
        <description>The floor in a building where Premises is located.</description>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HouseNumberSupplement__c</fullName>
        <description>House number supplement of given Premises.</description>
        <label>House Number Supplement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsKeyAtPremises__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a key is available at the premises to access the meter.</description>
        <label>Key at Premises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOkToEnter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a field service rep has permission to enter the premise for meter read or other field activities.</description>
        <label>Ok to Enter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSupplyGuaranteed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supply cannot be turned off for the premises.</description>
        <label>Supply Guaranteed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Jurisdiction__c</fullName>
        <description>Jurisdiction in which the Premises exists.</description>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jurisdiction A</fullName>
                </value>
                <value>
                    <fullName>Jurisdiction B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadInstructions__c</fullName>
        <description>Provides additional meter read instructions required to access difficult meters.</description>
        <label>Meter Read Instructions</label>
        <length>32786</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadWarning__c</fullName>
        <description>Provides warnings to the meter reader.</description>
        <label>Meter Read Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfOccupants__c</fullName>
        <description>Number of occupants located at the premises.</description>
        <label>Number of Occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Child Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesIdentifier__c</fullName>
        <description>Defined as &apos;external id&quot; so ID to be used especially for integration to outside systems.</description>
        <externalId>true</externalId>
        <label>Premises Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesNumber__c</fullName>
        <description>Potentially an external id</description>
        <label>Premises Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesType__c</fullName>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Floor Section</fullName>
                </value>
                <value>
                    <fullName>Apartment Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertyOwnerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer account that is considered the titled owner of this premises. Used in energy and utilities implementations to identify who should be charged for services after one tenant leaves and before a new tenant moves in.</description>
        <label>Property Owner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                    <default>true</default>
                    <label>Connected</label>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Install in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SupplyGuaranteeReason__c</fullName>
        <description>Supply cannot be turned off for the premises - reason</description>
        <label>Supply Guarantee Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Device</fullName>
                </value>
                <value>
                    <fullName>Contractual Agreement</fullName>
                </value>
                <value>
                    <fullName>National Security</fullName>
                </value>
                <value>
                    <fullName>Public Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeZone__c</fullName>
        <description>Timezone of this premises.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityTimeZones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrendArea__c</fullName>
        <description>Premises location classification</description>
        <label>Trend Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitNumber__c</fullName>
        <description>Unit / Apartment number of this Premises.</description>
        <label>Unit / Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Premises</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>DSAT_Ticket__c</columns>
        <columns>vlocity_cmt__StreetAddress__c</columns>
        <columns>vlocity_cmt__City__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>vlocity_cmt__HouseNumberSupplement__c</columns>
        <columns>vlocity_cmt__PostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__StreetAddress__c</field>
            <operation>contains</operation>
            <value>64 Chester</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>